deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vimbin
  labels:
    app: vimbin
spec:
  rules:
    - host: vimbin.foo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vimbin
                port:
                  name: vimbin
